tests/agl/rejections/type/null_to_text.agl
let s: text = null
s
